fix buffer overflow in SOCKS5 UDP logic

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+	* fix buffer overflow in SOCKS5 UDP logic
 	* fix issue of rapid calls to file_priority() clobbering each other
 	* clear tracker errors on success
 	* optimize setting with unlimited unchoke slots
