extend SSRF mitigation to also cover web seeds

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 	* validate HTTPS certificates by default (trackers and web seeds)
 	* load SSL certificates from windows system certificate store, to authenticate trackers
-	* introduce mitigation for Server Side Request Forgery in tracker announces
+	* introduce mitigation for Server Side Request Forgery in tracker and web seed URLs
 	* fix error handling for pool allocation failure
 
 1.2.11 released
